# pffft-double

./: .gitignore  LICENSE  README.txt  pffft-double.c  pffft-double.h  pffft.c  pffft.hpp
test/: .clang-format  CMakeLists.txt  fft4g.h  pffft-double-test.cpp
